package org.metrostate.ics.ordertrackingapp;

import javafx.application.Application;

/**
 * Launches the program.
 */
public class Launcher {
    public static void main(String[] args) {
        Application.launch(OrderTrackerApp.class, args);
    }
}
