@startuml
'https://plantuml.com/class-diagram

class Launcher {
    + main(args: String[]) : void
}

class OrderTrackerApp {
    - orderListener: OrderListener

    + start(stage: Stage) : void
    - getTestOrdersPath() : String
}

class OrderListener {
    - directoryPath : Path
    - callback : OrderFileCallback
    - executorService : ExecutorService
    - running : boolean
    - processedFiles : Set<String>

    + OrderListener(directoryPath: String, callback: OrderFileCallback)
    - waitForFileReadable(file: File, baseSleepMillis: long) : boolean
    - loadExistingFiles() : void
    + start() : void
    + stop() : void
    + run() : void
}

interface OrderFileCallback {
    + onNewOrderFile(file: File) : void
}

class OrderTrackerController {
    - ordersContainer : VBox
    - detailContainer : VBox
    - scrollPane : ScrollPane
    - cancelButton : Button
    - undoButton : Button
    - startButton : Button
    - completeButton : Button
    - clearAllOrdersButton : Button
    - statusFilter : ComboBox<String>
    - typeFilter : ComboBox<String>
    - orderFiles : List<String>
    - orderListener : OrderListener
    - orderDriver : OrderDriver
    - selectedOrderBox : VBox
    - selectedOrder : Order
    - driverListener : OrderDriver.OrderChangeListener
    - BASE_BOX_STYLE : String {final}

    + initialize() : void
    + setOrderListener(orderListener: OrderListener) : void
    + setOrderDriver(driver: OrderDriver) : void
    + exitApplication() : void
    + clearAllOrders() : void
    - updateClearAllButtonVisibility() : void
    - saveStateOnExit() : void
    + addOrderFile(file: File) : void
    - createOrderBox(sourceName: String, order: Order) : VBox
    - updateButtonsVisibility(order: Order) : void
    - showOrderDetails(order: Order) : void
    - selectOrderBox(box: VBox) : void
    - statusColor(status: Status) : String
    - typeColor(formattedType: String) : String
    - cancelSelectedOrder() : void
    - undoCancel() : void
    - startSelectedOrder() : void
    - completeSelectedOrder() : void
    - refreshOrderBox(orderBox: VBox, order: Order) : void
    - findOrderBoxForOrder(order: Order) : VBox
    - applyFilters() : void
}

class OrderDriver {
    - orders : List<Order>
    - lastCancelledOrder : Order
    - listeners : List<OrderChangeListener>
    + OrderDriver()
    + addListener(l: OrderChangeListener) : void
    + removeListener(l: OrderChangeListener) : void
    - notifyOrderAdded(o: Order) : void
    - notifyOrderChanged(o: Order) : void
    + addOrder(order: Order) : void
    + getOrderCount() : int
    + startOrder(order: Order) : void
    + completeOrder(order: Order) : void
    + orderExportJSON(order: Order, fileDirectory: String) : void
    + saveAllOrdersToJSON(fileDirectory: String) : void
    + clearAllOrders() : void
    + getOrders() : List<Order>
    + cancelOrderGUI(order: Order) : boolean
    + uncancelOrder(order: Order) : boolean
}

interface OrderChangeListener {
    + orderAdded(order: Order) : void
    + orderChanged(order: Order) : void
}

class Parser {
    - nextOrderNumber : int {static}

    + setNextOrderNumber(orderID : int) : void {static}
    + parseJSONOrder(file : File) : Order {static}
    + parseXMLOrder(file : File) : Order {static}
    + parseSavedJSONOrder(file : File) : Order {static}
    - getNextOrderNumber() : int {static}
    + main(args: String[]) : void {static}
}

class Order {
    - orderId : int
    - date : long
    - totalPrice : double
    - type : Type
    - status : Status
    - foodList : ArrayList<FoodItem>
    - company : String

    + Order()
    + Order(orderId: int, type: Type, date: long, foodList: List<FoodItem>)
    + Order(orderId: int, date: long, totalPrice: double, type: Type, status: Status, foodList: List<FoodItem>)
    + getDate() : long
    + getTotalPrice() : double
    + getType() : Type
    + getStatus() : Status
    + getFoodList() : ArrayList<FoodItem>
    + getOrderID() : int
    + sumPrice() : double
    + addFoodItem(f: FoodItem) : boolean
    + setStatus(newStatus: Status) : void
    + toString() : String
    + getCompany() : String
    + setCompany(company: String) : void
    + parseOrderStatus(stringStatus: String) : Status
    + parseOrderType(stringType: String) : Type
    + displayStatus() : String
    + displayType() : String
}

class FoodItem {
    - name : String
    - quantity : int
    - price : double

    + FoodItem()
    + FoodItem(name: String, quantity: int, price: double)
    + getName() : String
    + setName(name: String) : void
    + getQuantity() : int
    + setQuantity(quantity: int) : void
    + getPrice() : double
    + setPrice(price: double) : void
    + toString() : String
}
enum Status {
    cancelled
    completed
    inProgress
    waiting
    + toString(): String
}

enum Type {
    togo
    pickup
    delivery
    + toString(): String
}

enum Directory {
    + savedOrders
    + testOrders
    + importOrders
    - path : String

    - Directory(path: String)
    + getPath() : String
    + getDirectory(directory: Directory) : String
    - createDirectory(directory: String) : String
}

Launcher --> "1" OrderTrackerApp
OrderTrackerApp "1" --> "1" OrderListener
OrderListener "1" --> "1" OrderFileCallback
OrderListener "1" --> "1" OrderTrackerController
OrderTrackerController "1" --> "1" Parser
OrderTrackerController "1" --> "1" OrderDriver
OrderDriver "1" --> "0..*" OrderChangeListener
OrderDriver "1" --> "1..*" Order
Order "1" --> "1..*" FoodItem
Order "1" --> "1" Status
Order "1" --> "1" Type

@enduml